[tool.poetry]
name = "sovietscloset-data"
version = "69"
description = "balls"
authors = ["ChillingPepper"]

[tool.poetry.dependencies]
python = "^3.9"
requests = "^2.26.0"
eventlet = "^0.32.0"

[tool.poetry.dev-dependencies]
black = "^21.9b0"

[tool.black]
line-length = 99

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
